# solguard

./: .env.example  .gitignore  Anchor.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  solguard-dashboard_1.html  solguard_alerts.db-shm  solguard_alerts.db-wal  vercel.json
.vercel/: project.json
_restructure/: MIGRATION.md  README.md  docker-compose.yml
_restructure/solguard-core/: .dockerignore  .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  requirements.txt
_restructure/solguard-core/.github/workflows/: ci.yml
_restructure/solguard-core/agent/: __init__.py  database.py  main.py  metrics.py  notifiers.py  onchain_writer.py
_restructure/solguard-core/docs/: DEMO_SCRIPT.md
_restructure/solguard-core/programs/solguard-registry/: Cargo.toml
_restructure/solguard-dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  vercel.json
_restructure/solguard-notifiers/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
_restructure/solguard-notifiers/src/: __init__.py  discord_client.py  server.py  signing.py  telegram_client.py
_restructure/solguard-notifiers/tests/: __init__.py  test_signing.py
agent/: claude_engine.py  database.py  main.py  onchain_writer.py
agent/watchers/: nonce_monitor.py  upgrade_authority.py
dashboard/: app.html  index.html  login.html  login.js  modal.js  team.html  theme.js
docs/: AUDIT_REPORT.md
programs/solguard-registry/: Cargo.toml
programs/solguard-registry/src/: lib.rs
scripts/: setup_telegram.sh
(+7 files in other folders)
